Package_Tools/include-C/efl/ecore-evas-1/fertig/Ecore_Evas.pp

{*
 * @brief Sets rotation finish manually.
 *
 * @param ee The Ecore_Evas
 *
 * @since 1.9.0
  }
procedure ecore_evas_wm_rotation_manual_rotation_done(ee:PEcore_Evas);cdecl;external;
{*
 * @brief Gets the list of supported auxiliary hint strings.
 *
 * @param ee The Ecore_Evas
 * @return List of supported auxiliary hint strings.
 *
 * @note Do not change the returned list of its contents. Auxiliary hint
 * strings are internal and should be considered constants, do not free or
 * modify them.
 * @warning Support for this depends on the underlying windowing system.
 *
 * The window auxiliary hint is the value which is used to decide which actions should
 * be made available to the user by the window manager. If you want to set a specific hint
 * on your window, then you should check whether it exists in the supported auxiliary
 * hints that are registered in the root window by the window manager. Once you've added
 * an auxiliary hint, you can get a new ID which is used to change value and delete hint.
 * The window manager sends the response message to the application on receiving auxiliary
 * hint change event. A list of auxiliary hints within the Ecore_Evas has this format:
 * ID:HINT:VALUE,ID:HINT:VALUE,...
 *
 * @since 1.10.0
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_aux_hints_supported_get(ee:PEcore_Evas):PEina_List;cdecl;external;
{*
 * @brief Gets the list of allowed auxiliary hint IDs.
 *
 * @param ee The Ecore_Evas
 * @return List of allowed auxiliary hint IDs.
 *
 * @note This function is low level. Instead of using it directly, consider
 * using the callback mechanism in Elementary such as "aux,hint,allowed".
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.10.0
  }
(* Const before type ignored *)
function ecore_evas_aux_hints_allowed_get(ee:PEcore_Evas):PEina_List;cdecl;external;
{*
 * @brief Creates an auxiliary hint of the Ecore_Evas.
 *
 * @param ee The Ecore_Evas
 * @param hint The auxiliary hint string.
 * @param val The value string.
 * @return The ID of created auxiliary hint, or @c -1 on failure.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.10.0
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_aux_hint_add(ee:PEcore_Evas; hint:Pchar; val:Pchar):longint;cdecl;external;
{*
 * @brief Deletes an auxiliary hint of the Ecore_Evas.
 *
 * @param ee The Ecore_Evas
 * @param id The ID of the auxiliary hint.
 * @return @c EINA_TRUE if no error occurred, @c EINA_FALSE otherwise.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.10.0
  }
(* Const before type ignored *)
function ecore_evas_aux_hint_del(ee:PEcore_Evas; id:longint):TEina_Bool;cdecl;external;
{*
 * @brief Changes a value of the auxiliary hint.
 *
 * @param ee The Ecore_Evas
 * @param id The auxiliary hint ID.
 * @param val The value string to be set.
 * @return @c EINA_TRUE if no error occurred, @c EINA_FALSE otherwise.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.10.0
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_aux_hint_val_set(ee:PEcore_Evas; id:longint; val:Pchar):TEina_Bool;cdecl;external;
{*
 * @brief Gets a value of the auxiliary hint.
 *
 * @param ee The Ecore_Evas
 * @param id The auxiliary hint ID.
 * @return The string value of the auxiliary hint ID, or NULL if none exists
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.15
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_aux_hint_val_get(ee:PEcore_Evas; id:longint):Pchar;cdecl;external;
{*
 * @brief Gets a ID of the auxiliary hint string.
 *
 * @param ee The Ecore_Evas
 * @param hint The auxiliary hint string.
 * @return The ID of the auxiliary hint string, or @c -1 if none exists
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @since 1.15
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_aux_hint_id_get(ee:PEcore_Evas; hint:Pchar):longint;cdecl;external;
{*
 * @brief Sends message to parent ecore.
 *
 * @param ee The Ecore_Evas to set
 * @param msg_domain The domain of message
 * @param msg_id The id of message
 * @param data The data of message
 * @param size The size of message data
 *
 * @warning Support for this depends on the underlying windowing system.
 * @since 1.8.0
 *
 * @see ecore_evas_msg_send()
 * @see ecore_evas_callback_msg_parent_handle_set()
 * @see eecore_evas_callback_msg_handle_set()
 *
 * This is a list of examples of these functions:
 * @li ecore_evas_extn_socket_example
 * @li ecore_evas_extn_plug_example
  }
procedure ecore_evas_msg_parent_send(ee:PEcore_Evas; msg_domain:longint; msg_id:longint; data:pointer; size:longint);cdecl;external;
{*
 * @brief Sends message to child ecore.
 *
 * @param ee The Ecore_Evas to set
 * @param msg_domain The domain of message
 * @param msg_id The id of message
 * @param data The data of message
 * @param size The size of message data
 *
 * @warning Support for this depends on the underlying windowing system.
 * @since 1.8.0
 *
 * @see ecore_evas_msg_parent_send()
 * @see ecore_evas_callback_msg_parent_handle_set()
 * @see eecore_evas_callback_msg_handle_set()
  }
procedure ecore_evas_msg_send(ee:PEcore_Evas; msg_domain:longint; msg_id:longint; data:pointer; size:longint);cdecl;external;
{*
 * @brief Sets a callback for parent Ecore_Evas message.
 *
 * @param ee The Ecore_Evas to set callbacks on
 * @param func_parent_handle The handle to be called when message arrive.
 *
 * @warning Support for this depends on the underlying windowing system.
 * @since 1.8.0
 *
 * @see ecore_evas_msg_parent_send()
 * @see ecore_evas_msg_send()
 * @see eecore_evas_callback_msg_handle_set()
  }
procedure ecore_evas_callback_msg_parent_handle_set(ee:PEcore_Evas; func_parent_handle:procedure (ee:PEcore_Evas; msg_domain:longint; msg_id:longint; data:pointer; size:longint));cdecl;external;
{*
 * @brief Sets a callback for child Ecore_Evas message.
 *
 * @param ee The Ecore_Evas to set callbacks on
 * @param func_handle  The handle to be called when message arrive
 *
 * @warning Support for this depends on the underlying windowing system.
 * @since 1.8.0
 *
 * @see ecore_evas_msg_parent_send()
 * @see ecore_evas_msg_send()
 * @see ecore_evas_callback_msg_parent_handle_set()
  }
procedure ecore_evas_callback_msg_handle_set(ee:PEcore_Evas; func_handle:procedure (ee:PEcore_Evas; msg_domain:longint; msg_id:longint; data:pointer; size:longint));cdecl;external;
{*
 * @brief Moves an Ecore_Evas.
 *
 * @param ee The Ecore_Evas to move
 * @param x The x coordinate to move to
 * @param y The y coordinate to move to
 *
 * This moves @p ee to the screen coordinates (@p x, @p y)
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_new()
 * @see ecore_evas_resize()
 * @see ecore_evas_move_resize()
  }
procedure ecore_evas_move(ee:PEcore_Evas; x:longint; y:longint);cdecl;external;
{*
 * @brief Resizes an Ecore_Evas.
 *
 * @param ee The Ecore_Evas to move
 * @param w The w coordinate to resize to
 * @param h The h coordinate to resize to
 *
 * This resizes @p ee to @p w x @p h.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_new()
 * @see ecore_evas_move()
 * @see ecore_evas_move_resize()
  }
procedure ecore_evas_resize(ee:PEcore_Evas; w:longint; h:longint);cdecl;external;
{*
 * @brief Moves and resizes an Ecore_Evas.
 *
 * @param ee The Ecore_Evas to move and resize
 * @param x The x coordinate to move to
 * @param y The y coordinate to move to
 * @param w The w coordinate to resize to
 * @param h The h coordinate to resize to
 *
 * This moves @p ee to the screen coordinates (@p x, @p y) and resizes
 * it to @p w x @p h.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_new()
 * @see ecore_evas_move()
 * @see ecore_evas_resize()
  }
procedure ecore_evas_move_resize(ee:PEcore_Evas; x:longint; y:longint; w:longint; h:longint);cdecl;external;
{*
 * @brief Sets the rotation of an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas
 * @param rot The angle (in degrees) of rotation
 *
 * The allowed values of @p rot depend on the engine being used. Most only
 * allow multiples of 90.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_rotation_with_resize_set()
  }
procedure ecore_evas_rotation_set(ee:PEcore_Evas; rot:longint);cdecl;external;
{*
 * @brief Sets the rotation of an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas
 * @param rot The angle (in degrees) of rotation.
 *
 * Like ecore_evas_rotation_set(), but it also resizes the window's content so
 * that it fits inside the current window geometry.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_rotation_set()
  }
procedure ecore_evas_rotation_with_resize_set(ee:PEcore_Evas; rot:longint);cdecl;external;
{*
 * @brief Gets the rotation of an Ecore_Evas' window
 *
 * @param ee The Ecore_Evas
 * @return The angle (in degrees) of rotation
 *
 * @see ecore_evas_rotation_set()
 * @see ecore_evas_rotation_with_resize_set()
  }
(* Const before type ignored *)
function ecore_evas_rotation_get(ee:PEcore_Evas):longint;cdecl;external;
{*
 * @brief Raises an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas to raise.
 *
 * This functions raises the Ecore_Evas to the front.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_lower()
 * @see ecore_evas_layer_set()
  }
procedure ecore_evas_raise(ee:PEcore_Evas);cdecl;external;
{*
 * @brief Lowers an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas to raise.
 *
 * This functions lowers the Ecore_Evas to the back.
 *
 * @warning Support for this depends on the underlying windowing system.
 *
 * @see ecore_evas_raise()
 * @see ecore_evas_layer_set()
  }
procedure ecore_evas_lower(ee:PEcore_Evas);cdecl;external;
{*
 * @brief Sets the title of an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas whose title you wish to set.
 * @param t The title
 *
 * This function sets the title of @p ee to @p t.
 *
 * @warning Support for this depends on the underlying windowing system.
  }
(* Const before type ignored *)
procedure ecore_evas_title_set(ee:PEcore_Evas; t:Pchar);cdecl;external;
{*
 * @brief Gets the title of an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas whose title you wish to get.
 * @return The title of @p ee.
 *
 * @see ecore_evas_title_set()
  }
(* Const before type ignored *)
(* Const before type ignored *)
function ecore_evas_title_get(ee:PEcore_Evas):Pchar;cdecl;external;
{*
 * @brief Sets the name and class of an Ecore_Evas' window.
 *
 * @param ee the Ecore_Evas
 * @param n The name
 * @param c The class
 *
 * This function sets the name of @p ee to @p n, and its class to @p c. The
 * meaning of @p name and @p class depends on the underlying windowing system.
 *
 * @warning Support for this depends on the underlying windowing system.
  }
(* Const before type ignored *)
(* Const before type ignored *)
procedure ecore_evas_name_class_set(ee:PEcore_Evas; n:Pchar; c:Pchar);cdecl;external;
{*
 * @brief Gets the name and class of an Ecore_Evas' window.
 *
 * @param ee The Ecore_Evas to query.
 * @param n A pointer to a string to place the name in.
 * @param c A pointer to a string to place the class in.
 *
 * This function gets the name of @p ee into @p n, and its class into
 * @p c.
 *
 * @see ecore_evas_name_class_set()
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure ecore_evas_name_class_get(ee:PEcore_Evas; n:PPchar; c:PPchar);cdecl;external;
